# sweatapp-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SweatCheck_App_Spec.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml  publish.yml
app/: dependencies.py  main.py
app/api/: schemas.py
app/api/routers/: activities.py  auth.py  statistics.py  webhooks.py
app/core/: config.py  security.py
app/domain/: interfaces.py  models.py
app/domain/services/: activity_sync.py  statistics.py  strava_auth.py
app/infrastructure/db/: migrations.py  repository.py  token_repository.py  user_repository.py
app/infrastructure/strava/: client.py
app/infrastructure/weather/: provider.py
docs/adr/: 0001-teknisk-arkitektur.md  0002-database-layer.md  0003-backend-structure.md  0004-test-philosophy.md
docs/plans/: 2026-05-31-backend-skeleton.md  2026-05-31-clean-backend.md  2026-05-31-flutter-frontend.md  2026-05-31-strava-integration.md
sql/migrations/: 0001_init.sql  0002_add_apparent_temp_and_weather_code.sql
tests/: conftest.py
tests/architecture/: test_layers.py
tests/integration/: conftest.py  test_activity_api.py  test_auth_api.py  test_statistics_api.py  test_strava_sync.py
tests/unit/: test_app_startup.py  test_domain_logic.py  test_security.py
tests/unit/domain/: test_statistics_service.py  test_strava_auth.py
tests/unit/infrastructure/: test_strava_client.py  test_weather_provider.py
