[tool.poetry]
name = "sweatcheck"
version = "0.1.0"
description = "Sweat loss tracking API"
authors = ["Jonas Lundblad"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
asyncpg = "^0.31.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
python-multipart = "^0.0.32"
httpx = "^0.28.1"
pyjwt = "^2.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.16"
mypy = "^2.1.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
testcontainers = {extras = ["postgresql"], version = "^4.14.2"}
respx = "^0.23.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests"]
